4.5.20-SNAPSHOT
----------

4.5.19.ayg
----------

    [  ] Upgrade cssparser to 0.9.23
	[  ] fix tableSubfooterBackgroundColor color on wine theme


4.5.18.ayg
----------

    [  ] Upgrade cssparser to 0.9.22
	[  ] Upgrade jQuery to 1.12.4
	[#2] Custom paste plugin to convert images to embebed base64 img tags
	[#1] Create new default log implementation for log4j

4.5.17.Final
------------

    Bug
    [RF-4491] - pickList doesn't honor property 'disabled' of selectItems
    [RF-10966] - rich:autocomplete - missing @status attribute, autocomplete and select not unified
    [RF-12242] - rich:dropDownMenu and showTimeout works wrong
    [RF-12731] - mobile showcase: a4j:queue/attachQueue are not working
    [RF-12778] - panelMenu: JS API calls doesn't work
    [RF-13537] - Autocomplete: onbegin attribute ignored
    [RF-14268] - mobile showcase: ajax validation messages does not show up without refreshing the page [MyFaces]
    [RF-14272] - page-fragments: inplace select: remove unnecessary Selenium workaround in select method
    [RF-14273] - page-fragments: contextMenu: correct the default showEvent and fix workaround for phantomjs
    [RF-14275] - dataScroller: JS API: invoking fastRewind/fastForward throws NumberFormatException
    [RF-14277] - extendedDataTable: JS API
    [RF-14282] - dataTable: add missing clearSorting/Filtering JS API methods to Component reference
    [RF-14288] - examples: missing checkstyle plugin version
    [RF-14295] - mobile showcase: visual issues
    [RF-14297] - RichFaces Update 4.5.15 => 4.5.16 breaks a4j:ajax => method not invoked
    [RF-14298] - datatable - rowclick listener triggered twice
    [RF-14299] - Popup-Panel resizing broken in 4k resolution monitors
    [RF-14301] - autocomplete events invoked on wrong target
    [RF-14302] - mobile showcase: browsing to sample by url returns to last opened sample

    Component Upgrade
    [RF-14274] - Upgrade third-party libraries

    Enhancement